Mon Jan 28 15:34:43 2002  Owen Taylor  <otaylor@redhat.com>

	* pixbuf-render.c (compute_hint): Fix hint computation
	again.

Mon Jan 28 12:17:07 2002  Owen Taylor  <otaylor@redhat.com>

	* pixbuf-render.c (compute_hint): Fix problems in computing
	MISSING hint.

Sun Jan 27 23:58:13 2002  Owen Taylor  <otaylor@redhat.com>

	* pixbuf-render.c (compute_hint): Optimize the case
	where a component is entirely transparent by skipping
	drawing it.

	* pixbuf-rc-style.c (theme_parse_image): Catch case
	where background or overlay border/stretch are specified
	without a background image.

	* pixbuf-render.c (theme_pixbuf_destroy): Actually free
	the structure and filename.

=================== Move back into gtk-engines ====================
	
Sat Jan 19 02:45:17 2002  Owen Taylor  <otaylor@redhat.com>

	* src/pixbuf-render.c (theme_pixbuf_compute_hints): Catch
	invalid borders, and warn.

Sat Jan 19 00:32:14 2002  Owen Taylor  <otaylor@redhat.com>

	* examples/*: Add an extrodinarily ugly example.

	* src/pixbuf-draw.c (draw_simple_image): Never shape
	the window, even if we are allowed to. Shaping is
	ugly -- if the widget isn't NO_WINDOW (most are),
	you'll just have to draw it rectangular.

	* src/pixbuf-render.c (pixbuf_render): Always use
	gdk_pixbuf_render_alpha() with FULL_ALPHA() as the
	type.

	* pixbuf.h src/pixbuf-render.c (theme_pixbuf_compute_hints): To
	speed up scaling, cache whether pixbufs have constant rows
	or constant columns.

	* src/pixbuf-render.c (pixbuf_render): Speed up scaling
	by using the hints from compute_hints().

Fri Jan 18 20:49:48 2002  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Use pkg-config to get the binray version
	of GTK+ that we use for an install path.

Fri Jan 18 18:14:11 2002  Owen Taylor  <otaylor@redhat.com>

	* src/pixbuf-draw.c (draw_focus): Fix for changes to draw_focus.

2001-09-21  Hans Breuer  <hans@breuer.org>

	* src/pixbuf-rc-style-c :  GtkRcStyle::parse has a GtkSettings